<resources>
    <string name="app_name">Gplanner</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main">Main Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_semester">SemesterActivity</string>
    <string name="title_activity_course">CourseActivity</string>
    <string name="title_activity_year">YearActivity</string>
    <string name="title_activity_event">EventActivity</string>
    <string name="title_activity_GPA_setter">GPA Setter</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="description2">description2</string>
    <string name="description3">description3</string>
    <string name="description4">description4</string>
    <string name="description1">description1</string>
    <string name="title">Title</string>
    <string name="facebook_app_id">324192591574369</string>
    <string name="fb_login_protocol_scheme">fb324192591574369</string>
</resources>
