<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_row"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginRight="0dp"
    android:layout_marginBottom="8dp">

    <android.support.v7.widget.CardView
        android:id="@+id/list_row_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="@dimen/cardview_compat_inset_shadow"
        android:layout_marginTop="@dimen/cardview_compat_inset_shadow"
        android:layout_marginEnd="@dimen/cardview_compat_inset_shadow"
        android:layout_marginBottom="@dimen/cardview_compat_inset_shadow" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:paddingEnd="0dp">

            <TextView
                android:id="@+id/status_bar"
                android:layout_width="10dp"
                android:layout_height="90dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="0dp"
                android:layout_marginEnd="0dp"
                android:background="@color/red"
                android:gravity="center_horizontal"
                android:paddingTop="0dp" />

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:text="@string/title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:text="@string/description1" />

            <TextView
                android:id="@+id/description2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description1"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="6dp"
                android:text="@string/description2" />

            <TextView
                android:id="@+id/description3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="150dp"
                android:layout_marginTop="35dp"
                android:text="@string/description3" />

            <TextView
                android:id="@+id/description4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description3"
                android:layout_alignParentStart="true"
                android:layout_marginStart="150dp"
                android:layout_marginTop="6dp"
                android:text="@string/description4" />

            <TextView
                android:id="@+id/bigBox"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginLeft="300dp"
                android:layout_marginTop="30dp" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>